# PomPom-Language

./: .gitignore  CHANGELOG.md  Kei2.cabal  README.md  hie.yaml  invest and earn bitcoin weekly  k.kei  test.kei  test2.kei
app/: Checker.hs  Effectful.hs  Main.hs  MiniLambda.hs  Parser.hs  Term.hs  Util.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
libs/: bits.pom  bool.pom  challenges.pom  equality.pom  function.pom  functor.pom  k.pom  list.pom  logic.pom  maybe.pom  monad.pom  nat.pom  prelude.pom  tcc.pom  test.mini  test.pom  vector.pom
tests/: test.kei  test2.kei  uni.kei
