cabal-version:      2.4
name:               Kei2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             caotic123
maintainer:         camposferreiratiago@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Kei2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   
      base ^>=4.17.0.0,
      parsec,
      containers,
      random,
      ghc,
      bimap,
      time,
      vector,
      hashable,
      monad-memo
    hs-source-dirs:   app
    default-language: Haskell2010